force-app/main/default/objects/Trail_Progress__c/fields/Trail__c.field-meta.xml
<CustomField>
    <fullName>Trail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trail</label>
    <referenceTo>Trail__c</referenceTo>
    <relationshipLabel>Trails Progress</relationshipLabel>
    <relationshipName>Trails_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>